# databricks-ml-lapse-prediction-score

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
notebooks/: 00_pyspark_view_csv.ipynb  00_quickstart.md  10_exploration.ipynb  20_register_feature_table.py
notebooks/Building Bronze Table/: 00_pyspark_create_chandra_csv.ipynb  00_pyspark_create_chandra_excel.ipynb  01_pyspark_create_chandra_excel.ipynb  02_pyspark_create_fwdmaxdaily_csv.ipynb  03_pyspark_create_tani_csv.ipynb  04_pyspark_create_chandra_dict_xlsx.ipynb  05_pyspark_create_fwdmax_dict_xlsx.ipynb
notebooks/Building Gold Table/: 01_pyspark_from_silver_chandra.ipynb  02_pyspark_from_silver_fwd_max_member.ipynb  03_pyspark_from_silver_fwd_max_transaction.ipynb  04_pyspark_from_silver_fwd_max_master_category.ipynb  05_pyspark_from_silver_agent_data.ipynb  06_pyspark_from_silver_claim_data.ipynb  07_create_ml_lapse_feature_tables.ipynb
notebooks/Building Silver Table/: 00_pyspark_exploration_chandra.ipynb  01_pyspark_union_chandra.ipynb  02_pyspark_exploration_fwdmax.ipynb  03_pyspark_for_fwd_max_member.ipynb  04_pyspark_for_fwd_max_transaction.ipynb  05_pyspark_for_fwd_max_master_category.ipynb  06_pyspark_for_agent_data.ipynb  07_pyspark_for_claim_data.ipynb
src/data/: features.py  loader.py
src/models/: predict.py  train.py
src/utils/: io.py
tests/: test_features.py  test_train_smoke.py
