[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_lapse_ml"
version = "0.1.0"
description = "Customer Lapse Prediction on Databricks"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}

[project.scripts]
train = "src.models.train:main"
predict = "src.models.predict:main"
